--- a/src/Countries.css
+++ b/src/Countries.css
@@ -8,3 +8,18 @@
     width: 120px;
     margin-right: 10px;
 }
+
+@media screen and (max-width: 576px) {
+    .countries {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .countries {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+}
