--- a/src/Countries.css
+++ b/src/Countries.css
@@ -9,17 +9,24 @@
     margin-right: 10px;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 320px) and (max-width: 476px) {
     .countries {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
     .countries {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+}
+@media screen and (min-width: 769px) and (max-width: 900px) {
+    .countries {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         gap: 20px;
     }
 }
